feat: isolate addon API and harden session ownership